--- a/myCheckpoint-two/css/style.css
+++ b/myCheckpoint-two/css/style.css
@@ -16,13 +16,11 @@ body {
 header {
   width: 100%;
   height: 8vh;
-  background: salmon;
-  /* background: rgb(231, 140, 170);
-  background-image: url(https://images.unsplash.com/photo-1524835391568-32c8f7016d73?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60);
-  background-size: contain; */
+  background: #552c28;
   text-align: center;
   font-weight: 800;
   font-size: 3vh;
+  color: rgb(230, 219, 219)
 }
 p.header {
   float: left;
@@ -34,11 +32,10 @@ nav {
   width: 100%;
   height: 10%;
   background: rgb(231, 140, 170);
-  background: rgb(231, 140, 170);
-  background-image: url(https://images.unsplash.com/photo-1524835391568-32c8f7016d73?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60);
-  background-size: contain;
+  background: black;
+  /* background-image: url(https://images.unsplash.com/photo-1524835391568-32c8f7016d73?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60);
+  background-size: contain; */
   color: white;
-  border-top: 3px double white;
   display: flex;
   position: relative;
   align-content: center;
@@ -48,35 +45,41 @@ nav {
 .spin {
   width: 50px;
   height: 50px;
-  border: 2px solid red;
+  border: 2px solid #974339;
   border-radius: 50% 50%;
-  animation: spin 1s infinite linear;
-  background: linear-gradient(160deg,#ea0d0d,#fa1588,#c46de1,#5c9fff,#00a6e3,#008d9c,#006e53,#204e17);
-  margin-top: 
+  /* animation: spin 1s infinite linear; */
+  background: linear-gradient(160deg,#974339,#843c34,#713630,#5e2f2b,#5b362f,#68493d,#745c4f,#807063);
+  margin-top: 10px;
 }
 @keyframes spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
 a.nav1 {
-  color: salmon;
-  font-size: 3vh;
-  padding: 4%;
+  color: #974339;
+  font-size: 2vh;
+  align-self: center;
+  margin-left: 10px;
   text-decoration: none;
-  text-shadow: 2px 2px 0 #4074b5, 2px -2px 0 #4074b5, -2px 2px 0 #4074b5, -2px -2px 0 #4074b5, 2px 0px 0 #4074b5, 0px 2px 0 #4074b5, -2px 0px 0 #4074b5, 0px -2px 0 #4074b5;
+  /* text-shadow: 2px 2px 0 #4074b5, 2px -2px 0 #4074b5, -2px 2px 0 #4074b5, -2px -2px 0 #4074b5, 2px 0px 0 #4074b5, 0px 2px 0 #4074b5, -2px 0px 0 #4074b5, 0px -2px 0 #4074b5; */
+}
+i {
+  color: #974339;
 }
 a.nav1:visited {
-  color: salmon;
+  color: #974339;
 }
 a.nav2 {
-  color: salmon;
-  font-size: 3vh;
-  padding: 4%;
+  color: #974339;
+  font-size: 2vh;
   text-decoration: none;
-  text-shadow: 2px 2px 0 #4074b5, 2px -2px 0 #4074b5, -2px 2px 0 #4074b5, -2px -2px 0 #4074b5, 2px 0px 0 #4074b5, 0px 2px 0 #4074b5, -2px 0px 0 #4074b5, 0px -2px 0 #4074b5;
+  align-self: center;
+  margin-left: 10px;
+
+  /* text-shadow: 2px 2px 0 #807063, 2px -2px 0 #807063, -2px 2px 0 #807063, -2px -2px 0 #807063, 2px 0px 0 #807063, 0px 2px 0 #807063, -2px 0px 0 #807063, 0px -2px 0 #807063; */
 }
 a.nav2:visited {
-  color: salmon;
+  color: #974339;
 }
 #hamburger {
   display: flex;
@@ -93,10 +96,10 @@ ul.hamburger {
   list-style: none;
 }
 li.ham {
-  background: white;
+  background: #974339;
   height: 20%;
   width: 100%;
-  border: 1px solid white;
+  border: 1px solid 	#483b35;
   border-radius: 40px;
   position: absolute;
   animation: hover 3s ease;
@@ -129,15 +132,15 @@ main {
   width: 100%;
 }
 .left {
-  background: hotpink;
+  background:#483b35;
   height: 60%;
   width: 40%;
   display: flex;
   justify-content: center;
   align-items: center;
   float: left;
-  color: white;
-  border: 5px solid blue;
+  color: #483b35;
+  border: 5px solid 	#552c28;
   background-image: url(http://pngimg.com/uploads/barbwire/barbwire_PNG18866.png);
   background-size: contain;
  
@@ -148,15 +151,16 @@ p.email {
   background: rgba(255, 255, 255, 0.616);
 }
 select {
-  background: chartreuse;
+  background:#807063;
+  color: cornsilk;
   
 }
 #cards {
   width: 50%;
   height: 80%;
-  border: 2px solid gray;
-  background: rgb(0, 0, 255);
-  box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
+  border: 2px solid #552c28;
+  background: black;
+  box-shadow:0 0 10px #974339;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -168,15 +172,16 @@ ul.cards {
   text-align: center;
 }
 li.cards {
-  background: gray;
+  background: #974339;
   height: 4vh;
   width: 4vh;
   font-weight: 1000;
-  border: 1px dotted pink;
-  animation: slideInLeft 6s linear; 
+  border: 1px solid black;
+  color: cornsilk
+  /* animation: slideInLeft 6s linear;  */
 }
 li.cards:nth-of-type(even) {
-  color:pink;
+  color: black
 }
 @keyframes slideInLeft {
   0% {
@@ -190,39 +195,37 @@ li.cards:nth-of-type(even) {
   }
 }
 a.github {
-  color: white;
+  color: cornsilk;
 
 }
 a.github:visited {
-  color: white;
+  color: cornsilk;
 }
 .right {
   height: 60%;
   width: 60%;
-  background: rgb(231, 140, 170);
-  background: rgb(231, 140, 170);
-  background-image: url(https://images.unsplash.com/photo-1524835391568-32c8f7016d73?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60);
-  background-size: contain;
+  background: black;
+  /* background-image: url(https://images.unsplash.com/photo-1524835391568-32c8f7016d73?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60);
+  background-size: contain; */
   float: right;
   padding: 5%
 }
 #rightbox {
   width: 90%;
   height: 80%;
-  background:rgb(46, 245, 245);
+  background:	#483b35;
   margin: auto;
-  border: 2px solid chartreuse;
-  box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+  border: 5px solid #552c28;
+  box-shadow:0 1px 4px #483b35, 0 0 40px #483b35 inset;
   
 }
 nav.rightbox {
-  background: chartreuse;
+  background: 	#552c28;
   height: 20%;
 }
 .leftbox {
   width: 30%;
   height: 100%;
-  background: rgb(187, 224, 20);
   border-radius: 50%;
 }
 img.love {
@@ -238,15 +241,16 @@ img.love {
 }
 input#radio {
   margin-bottom: 10px;
+  color: whit
   
 }
 button {
   width: 100%;
   height: 20%;
-  background: fuchsia;
-  color: white;
+  background: #974339;
+  color: cornsilk;
   font-size: 5vh;
-  border: 5px solid white;
+  border: 5px solid 	#552c28;
   border-radius: 25px;
   margin-top: 10px;
 }
@@ -261,8 +265,9 @@ hr {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(12, 1fr);
-  background-image: url(https://images.unsplash.com/photo-1508610048659-a06b669e3321?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60);
-  background-size: contain;
+  background: #552c28;
+  /* background-image: url(https://images.unsplash.com/photo-1508610048659-a06b669e3321?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60);
+  background-size: contain; */
 
 
 }
@@ -271,8 +276,8 @@ hr {
   grid-area: box1;
   grid-column: 9 / -1;
   grid-row: 2 / -1;
-  border: 2px solid orangered;
-  background: pink;
+  border: 2px solid #974339;
+  background: #974339;
 }
 img.box1 {
   width: 100%;
@@ -283,8 +288,8 @@ img.box1 {
   grid-area: box2;
   grid-column: 2 / span 4 ;
   grid-row: 1 / span 8;
-  background: orange;
-  border: 2px solid orangered
+  background: #974339;
+  border: 2px solid #974339;
 }
 img.box2 {
   width: 100%;
@@ -295,8 +300,8 @@ img.box2 {
   grid-area: box3;
   grid-column: 5 / 11;
   grid-row:  8 / -1;
-  background: orange;
-  border: 2px solid orangered;
+  background: #974339;
+  border: 2px solid #974339;
 }
 img.box3 {
   width: 100%;
@@ -362,7 +367,8 @@ img.box3 {
 p.box4 {
   font-weight: 800;
   font-size: 7vh;
-  transform: rotate(-30deg)
+  transform: rotate(-30deg);
+  color: cornsilk
 }
 footer {
   width: 100%;
