--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -2,14 +2,20 @@ body {
     height: 100%;
     width: 100%;
 }
+  
+  li a {
+    display: inline;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+  }
 nav {
     border: 1px solid black;
     
     height: 250px;
-
     width: 100%;
-    display: flex;
-    flex-direction: row;
+    /* display: flex;
+    flex-direction: row; */
 }
 h1 {
     text-align: center;
@@ -46,13 +52,14 @@ h1 {
     border: 1px solid black;
     margin: 10px;
     text-align: center;
+    font-size: 3em;
     justify-content: center;
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
+    grid-column-gap: 25px;
+    grid-row-gap: 35px;
     display: inline-grid;
-    grid-template-columns: 200px 200px 200px 200px; 
+    grid-template-columns: 200px 400px 200px 200px; 
     grid-template-rows: auto;
-    height: 100%;
+    height: 75%;
     width: 100%;
     grid-template-areas:
     "header header header header"
@@ -63,23 +70,27 @@ h1 {
 }
 nav {
     border: 1px solid black;
-    height: 100px;
-    width: 100%;
+     height: 200px;
+     width: 100%; 
+    text-align: center;
     display: flex;
     flex-direction: row;
-    text-align: center;
+    justify-content: center;
     /* word-spacing: 25px; */
     list-style-type: none;
-    /* display: block; */
-    /* color: white; */
     text-align: center;
     padding: 30px;
-    text-decoration: none;
-    padding-left: 25px;
+    font-size: 25px;
+    
 
 }
-li div {
+    ul  {
     padding: 20px;
+    word-break: normal;
+    border: 1px solid black;
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
 }
 
 }
