--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -1,1 +1,17 @@
-
+#wrapper {
+  width: 150px;
+  height: 150px;
+  border: 2px solid black;
+  margin: 0 auto;
+  border-radius: 50%;
+}
+.cookie {
+  width: 100%;
+  height: 100%;
+  background: red;
+  background-image: url(http://pngimg.com/uploads/cookie/cookie_PNG13681.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 50%;
+}
