--- a/09week/myown-form/style.css
+++ b/09week/myown-form/style.css
@@ -1,3 +1,8 @@
+:root {
+  --base: #f5f5f5 ;
+  --spacing: 10px;
+  --blur: 0px;
+}
 header {
   width: 100%;
   height: 10vh;
@@ -10,18 +15,13 @@ header {
 nav {
   width: 100%;
   height: 15vh;
-  background:#1d2731;
+  background: #1d2731;
   display: flex;
   justify-content: center;
   color: whitesmoke;
   font-size: 5vh;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   
-}
-img.nav {
-  width: 20%;
-  height: 100%;
-  float: left;
 }
 p.nav {
   margin-left: 20px;
@@ -47,13 +47,15 @@ main {
   text-align: center;
 }
 .form {
-  background: whitesmoke;
+  background: var(--base);
   width: 50%;
   height: auto;
   align-self: center;
+  padding: var(--spacing);
+  filter: blur(var(--blur))
 }
 .submit {
-  border: 3px solid navy;
+  
   border-radius: 12px;
   height: 5vh;
   width: 17vw;
